--- a/KifuSF/Base.lproj/Main.storyboard
+++ b/KifuSF/Base.lproj/Main.storyboard
@@ -12,6 +12,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="ekX-Be-Bie">
+            <objects>
+                <tabBarController storyboardIdentifier="initialTabBar" id="Lxb-Pv-ciH" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f1P-DH-dbs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Wmr-U8-Jk1" kind="relationship" relationship="viewControllers" id="7x5-fS-pR8"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0qi-15-FKG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2571" y="-227"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -91,7 +108,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="24.800000000000001" y="31.773399014778327"/>
+            <point key="canvasLocation" x="538" y="-227"/>
         </scene>
         <!--Register Form View Controller-->
         <scene sceneID="Wih-Qk-MTP">
@@ -498,12 +515,12 @@
                         <outlet property="phoneAddressTextField" destination="7os-UF-GRp" id="uup-nU-Ybu"/>
                         <outlet property="profileImage" destination="iSP-MZ-jkX" id="a6K-eN-2bY"/>
                         <outlet property="usernameTextField" destination="hTv-uu-fyy" id="cmg-p4-sxO"/>
-                        <segue destination="pjf-Mr-QSK" kind="presentation" identifier="registerToHome" modalTransitionStyle="flipHorizontal" id="fVH-CQ-kXZ"/>
+                        <segue destination="Lxb-Pv-ciH" kind="presentation" identifier="registerToHome" modalTransitionStyle="flipHorizontal" id="khz-xM-8hf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OYp-Pn-gAk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="736.79999999999995" y="28.817733990147783"/>
+            <point key="canvasLocation" x="1584" y="-227"/>
         </scene>
         <!--Post Donation-->
         <scene sceneID="AHO-Fz-f1Q">
@@ -1183,7 +1200,7 @@
                                 <rect key="frame" x="0.0" y="64" width="414" height="672"/>
                                 <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="volunteerCell" rowHeight="117" id="8g4-HN-0GS" customClass="VolunteerCell" customModule="KifuSF" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="volunteerCell" rowHeight="117" id="8g4-HN-0GS" customClass="VolunteerCell" customModule="KifuSF" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="117"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8g4-HN-0GS" id="eFa-jf-HPf">
@@ -1405,7 +1422,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Om-YC-bga" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="24.800000000000001" y="920.68965517241384"/>
+            <point key="canvasLocation" x="931.88405797101461" y="920.38043478260875"/>
         </scene>
         <!--Pending Requests View Controller-->
         <scene sceneID="rw6-i6-pOs">
@@ -1574,7 +1591,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wba-z0-xdu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1675" y="2471"/>
+            <point key="canvasLocation" x="-1687" y="2392"/>
         </scene>
         <!--Open Donations-->
         <scene sceneID="4k6-cp-6tH">
@@ -1585,10 +1602,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wja-H9-rhc">
-                                <rect key="frame" x="0.0" y="64" width="414" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
                                 <color key="backgroundColor" name="Table View Background Color"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="postCell" rowHeight="148" id="beJ-Gr-SOD" customClass="ItemPostCell" customModule="KifuSF" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="postCell" rowHeight="148" id="beJ-Gr-SOD" customClass="ItemPostCell" customModule="KifuSF" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="148"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="beJ-Gr-SOD" id="jAb-sq-PPF">
@@ -1809,15 +1826,15 @@
                         <constraints>
                             <constraint firstItem="HLZ-Yg-gax" firstAttribute="leading" secondItem="68m-Re-xhe" secondAttribute="leading" id="63Z-n6-nyI"/>
                             <constraint firstItem="wja-H9-rhc" firstAttribute="trailing" secondItem="68m-Re-xhe" secondAttribute="trailing" id="9Qg-Hh-Yba"/>
-                            <constraint firstItem="wja-H9-rhc" firstAttribute="top" secondItem="68m-Re-xhe" secondAttribute="top" id="N0p-Zi-gvF"/>
                             <constraint firstItem="wja-H9-rhc" firstAttribute="leading" secondItem="68m-Re-xhe" secondAttribute="leading" id="a4m-ns-nkD"/>
                             <constraint firstItem="68m-Re-xhe" firstAttribute="trailing" secondItem="HLZ-Yg-gax" secondAttribute="trailing" id="dqi-Nb-eVv"/>
+                            <constraint firstItem="wja-H9-rhc" firstAttribute="top" secondItem="h1e-4p-fnK" secondAttribute="top" id="hQw-NE-gjm"/>
                             <constraint firstItem="HLZ-Yg-gax" firstAttribute="top" secondItem="68m-Re-xhe" secondAttribute="top" id="hcK-qw-JlT"/>
                             <constraint firstItem="68m-Re-xhe" firstAttribute="bottom" secondItem="wja-H9-rhc" secondAttribute="bottom" id="hkA-xl-JMB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="68m-Re-xhe"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Open Donations" id="DW2-xn-TMO"/>
+                    <navigationItem key="navigationItem" title="Open Donations" id="KOx-lx-xeV"/>
                     <connections>
                         <outlet property="labelDeliveryBody" destination="cBV-7g-cML" id="t76-ma-bKH"/>
                         <outlet property="labelDeliveryHeader" destination="2fj-bB-RlU" id="czW-Tv-Tc7"/>
@@ -1843,7 +1860,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-892" y="2469.7151424287858"/>
+            <point key="canvasLocation" x="922" y="2337"/>
         </scene>
         <!--Status-->
         <scene sceneID="9DY-2x-AaH">
@@ -2006,7 +2023,7 @@
                                                                                 </connections>
                                                                             </button>
                                                                         </subviews>
-                                                                        <color key="backgroundColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        <color key="backgroundColor" name="Primary"/>
                                                                         <constraints>
                                                                             <constraint firstItem="Cgd-Qd-ZWy" firstAttribute="leading" secondItem="yeB-AI-8Gq" secondAttribute="leading" id="I5T-Lx-U6c"/>
                                                                             <constraint firstAttribute="bottom" secondItem="Cgd-Qd-ZWy" secondAttribute="bottom" id="XmG-QH-g13"/>
@@ -2083,7 +2100,7 @@
                                                                         </connections>
                                                                     </button>
                                                                 </subviews>
-                                                                <color key="backgroundColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="backgroundColor" name="Primary"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="29" id="GR6-2V-CHg"/>
                                                                     <constraint firstAttribute="width" constant="164" id="Hye-J7-cY7"/>
@@ -2460,7 +2477,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zGH-Dc-oyw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="24.637681159420293" y="2470.9239130434785"/>
+            <point key="canvasLocation" x="1839.1304347826087" y="2470.9239130434785"/>
         </scene>
         <!--Items-->
         <scene sceneID="6iR-bp-Rd4">
@@ -2471,8 +2488,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JWb-UG-c7d">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="barTintColor" red="0.0" green="0.59999999999999998" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -2485,7 +2500,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Leb-8a-spJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-889" y="1702"/>
+            <point key="canvasLocation" x="917" y="1701"/>
         </scene>
         <!--Status-->
         <scene sceneID="nDk-0t-JEP">
@@ -2510,7 +2525,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EbD-YL-E3u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="25" y="1702"/>
+            <point key="canvasLocation" x="1832" y="1701"/>
         </scene>
         <!--Social-->
         <scene sceneID="8oL-78-idk">
@@ -2539,7 +2554,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FMH-sd-tut" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="949.60000000000002" y="2470.6146926536735"/>
+            <point key="canvasLocation" x="2763.768115942029" y="2470.108695652174"/>
         </scene>
         <!--Social-->
         <scene sceneID="QRT-Wg-DRD">
@@ -2564,7 +2579,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mBq-5h-R6J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="951" y="1701"/>
+            <point key="canvasLocation" x="3020" y="1701"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="awQ-Lz-FW7">
@@ -2586,6 +2601,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rde-4e-SGs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="25" y="3203"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="stv-kh-ezM">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="Wmr-U8-Jk1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="1vF-ER-EdU"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8TI-a9-RGS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1991" y="418"/>
         </scene>
     </scenes>
     <resources>
